--- a/style.css
+++ b/style.css
@@ -473,6 +473,7 @@ footer a {
 /*         display: none; */
 /*         position: fixed; */
 /*         min-width: 100vw; */
+        position: absolute;
         display: flex;
         justify-content:center;
         align-items:center;
